[package]
version = "0.6.0"
edition = "2021"
name = "tracing-profile"
description = "A span based profiler, utilizing the tracing crate"
keywords = ["metrics", "profiling", "tracing"]
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://gitlab.com/IrreducibleOSS/tracing-profile"

[dependencies]
perf-event = { version = "0.4.8", optional = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
perfetto-sys = { git = "ssh://git@gitlab.com/ulvetanna/perfetto-sys.git", rev = "cc22318a5ce3bddfe58794566356d438c26da2cd", optional = true}

[features]
panic = []
perf_counters = ["perf-event"]
perfetto = ["dep:perfetto-sys"]
