[package]
version = "0.6.0"
edition = "2021"
name = "tracing-profile"
description = "A span based profiler, utilizing the tracing crate"
keywords = ["metrics", "profiling", "tracing"]
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://gitlab.com/IrreducibleOSS/tracing-profile"

[dependencies]
perf-event = { version = "0.4.8", optional = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
# perfetto-sys = { path = "../perfetto-sys", optional=true } 
perfetto-sys = { git = "ssh://git@gitlab.com/ulvetanna/perfetto-sys.git", rev = "8f45234b9dbff95d31b5618dccee61735aab6b6f", optional = true}

[features]
panic = []
perf_counters = ["perf-event"]
perfetto = ["dep:perfetto-sys"]
